syntax = "proto3";

package go.micro.srv.GetArea;

service Example {
	rpc GetArea(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {

}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	message Area {
		int32 Id = 1;
		string Name = 2;
	}
	repeated Area Data = 3;
}
