syntax = "proto3";

package go.micro.srv.GetHouseInfo;

service Example {
	rpc GetHouseInfo(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	int64 HouseId = 2;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	int64 UserId = 3;
	bytes Data = 4;
}
