syntax = "proto3";

package go.micro.srv.GetImageCd;

service Example {
	rpc GetImageCd(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string uuid = 1;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	bytes Pix = 3;
	int64 Stride = 4;
	message Point {
		int64 X = 1;
		int64 Y = 2;
	}
	Point Min = 5;
	Point Max = 6;
}
