syntax = "proto3";

package go.micro.srv.GetIndexBanner;

service Example {
	rpc GetIndexBanner(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	bytes Data = 3;
}
