syntax = "proto3";

package go.micro.srv.GetUserOrder;

service Example {
	rpc GetUserOrder(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	string Role = 2;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	bytes Data = 3;
}
