syntax = "proto3";

package go.micro.srv.PostHouses;

service Example {
	rpc PostHouse(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	bytes Body = 2;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	int64 HouseId = 3;
}
