syntax = "proto3";

package go.micro.srv.PostOrder;

service Example {
	rpc PostOrder(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	bytes Data = 2;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	int64 OrderId = 3;
}
