syntax = "proto3";

package go.micro.srv.PutOrder;

service Example {
	rpc PutOrder(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	string OrderId = 2;
	string Action = 3;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
}
