syntax = "proto3";

package go.micro.srv.Register;

service Example {
	rpc Register(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string Mobile = 1;
	string Password = 2;
	string SmsCode = 3;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	string SessionId = 3;
}
