syntax = "proto3";

package go.micro.srv.UserAuth;

service Example {
	rpc PostUserAuth(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	string Real_name = 2;
	string Id_card = 3;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
}
